--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
             <a href="#">WORK WITH US</a>
         </section>
     </section>
-    <section class="seventhSection">
+    <footer class="seventhSection">
         <div class="seventhSectionDiv">
             <h4>ABOUT US</h4>
-            <p style="margin-bottom:10%;margin-top: 5%;"> This is Photoshop's version of Lorem Ipsum. Proin gravida nibh
+            <p style="margin-bottom:20px;"> This is Photoshop's version of Lorem Ipsum. Proin gravida nibh
                 vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum,
                 nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
                 accumsan ipsum velit. Ut aliquam massa nisl quis neque. Suspendisse in orci enim.Aenean sollicitudin,
@@ -306,7 +306,7 @@
                 <input class="myFooterInput sendButton" type="submit" value="SEND" disabled />
             </form>
         </div>
-    </section>
+    </footer>
 
 
 
