other sections responsive design except header

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             </form>
         </section>
         <div class="scrollInput">
-            <a href="#" class="scrolla">scroll down</a>
+            <a href="#myhead2nameContainer" class="scrolla">scroll down</a>
             <i class="fas fa-arrow-down scroldownicon"></i>
         </div>
     </header>
-    <section class="myhead2nameContainer">
+    <section class="myhead2nameContainer"  id="myhead2nameContainer">
         <section class="h2section">
             <h2>WHAT WE DO</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -171,66 +171,70 @@
             </section>
         </section>
         <div class="myCircleImgDiv">
-            <section class="circleImg">
-                <div class="RoundImg">
-                    <img src="img/man1.jpg" alt="team" />
-                </div>
-                <hr>
-                <p>Krisna Wijaya</p>
-                <div class="LastIconsDiv">
-                    <i class="fas fa-basketball-ball lastFisrtIcon"></i>
-                    <i class="fab fa-behance-square lastsecondIcon"></i>
-                    <i class="fab fa-twitter-square lastthirdIcon"></i>
-                </div>
-            </section>
-            <section class="circleImg">
-                <div class="RoundImg">
-                    <img src="img/man2.jpg" alt="team" />
-                </div>
-                <hr>
-                <p>Gabriel Yoshua</p>
-                <div class="LastIconsDiv">
-                    <i class="fas fa-basketball-ball lastFisrtIcon"></i>
-                    <i class="fab fa-behance-square lastsecondIcon"></i>
-                    <i class="fab fa-twitter-square lastthirdIcon"></i>
-                </div>
-            </section>
-            <section class="circleImg">
-                <div class="RoundImg">
-                    <img src="img/man3.jpg" alt="team" />
-                </div>
-                <hr>
-                <p>Adik N.K.L</p>
-                <div class="LastIconsDiv">
-                    <i class="fas fa-basketball-ball lastFisrtIcon"></i>
-                    <i class="fab fa-behance-square lastsecondIcon"></i>
-                    <i class="fab fa-twitter-square lastthirdIcon"></i>
-                </div>
-            </section>
-            <section class="circleImg">
-                <div class="RoundImg">
-                    <img src="img/man4.jpg" alt="team" />
-                </div>
-                <hr>
-                <p>Zan D.J</p>
-                <div class="LastIconsDiv">
-                    <i class="fas fa-basketball-ball lastFisrtIcon"></i>
-                    <i class="fab fa-behance-square lastsecondIcon"></i>
-                    <i class="fab fa-twitter-square lastthirdIcon"></i>
-                </div>
-            </section>
-            <section class="circleImg">
-                <div class="RoundImg">
-                    <img src="img/man5.jpg" alt="team" />
-                </div>
-                <hr>
-                <p>Faizal Febri</p>
-                <div class="LastIconsDiv">
-                    <i class="fas fa-basketball-ball lastFisrtIcon"></i>
-                    <i class="fab fa-behance-square lastsecondIcon"></i>
-                    <i class="fab fa-twitter-square lastthirdIcon"></i>
-                </div>
-            </section>
+            <div class="parts first-part">
+                <section class="circleImg">
+                    <div class="RoundImg">
+                        <img src="img/man1.jpg" alt="team" />
+                    </div>
+                    <hr>
+                    <p>Krisna Wijaya</p>
+                    <div class="LastIconsDiv">
+                        <i class="fas fa-basketball-ball lastFisrtIcon"></i>
+                        <i class="fab fa-behance-square lastsecondIcon"></i>
+                        <i class="fab fa-twitter-square lastthirdIcon"></i>
+                    </div>
+                </section>
+                <section class="circleImg">
+                    <div class="RoundImg">
+                        <img src="img/man2.jpg" alt="team" />
+                    </div>
+                    <hr>
+                    <p>Gabriel Yoshua</p>
+                    <div class="LastIconsDiv">
+                        <i class="fas fa-basketball-ball lastFisrtIcon"></i>
+                        <i class="fab fa-behance-square lastsecondIcon"></i>
+                        <i class="fab fa-twitter-square lastthirdIcon"></i>
+                    </div>
+                </section>
+                <section class="circleImg">
+                    <div class="RoundImg">
+                        <img src="img/man3.jpg" alt="team" />
+                    </div>
+                    <hr>
+                    <p>Adik N.K.L</p>
+                    <div class="LastIconsDiv">
+                        <i class="fas fa-basketball-ball lastFisrtIcon"></i>
+                        <i class="fab fa-behance-square lastsecondIcon"></i>
+                        <i class="fab fa-twitter-square lastthirdIcon"></i>
+                    </div>
+                </section>
+            </div>
+            <div class=" parts second-part">
+                <section class="circleImg">
+                    <div class="RoundImg">
+                        <img src="img/man4.jpg" alt="team" />
+                    </div>
+                    <hr>
+                    <p>Zan D.J</p>
+                    <div class="LastIconsDiv">
+                        <i class="fas fa-basketball-ball lastFisrtIcon"></i>
+                        <i class="fab fa-behance-square lastsecondIcon"></i>
+                        <i class="fab fa-twitter-square lastthirdIcon"></i>
+                    </div>
+                </section>
+                <section class="circleImg">
+                    <div class="RoundImg">
+                        <img src="img/man5.jpg" alt="team" />
+                    </div>
+                    <hr>
+                    <p>Faizal Febri</p>
+                    <div class="LastIconsDiv">
+                        <i class="fas fa-basketball-ball lastFisrtIcon"></i>
+                        <i class="fab fa-behance-square lastsecondIcon"></i>
+                        <i class="fab fa-twitter-square lastthirdIcon"></i>
+                    </div>
+                </section>
+            </div> 
         </div>
         <section class="greenButton lasta">
             <a href="#">WORK WITH US</a>
