--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 <body>
     <header>
         <nav>
-            <ol>
+            <ol class="o-l first">
                 <a href="#">
                     <li class="firstLi">Home</li>
                 </a>
-                <a href="#">
+                <a href="#myhead2nameContainer">
                     <li>What we do?</li>
                 </a>
-                <a href="#">
+                <a href="#myNextBigContainer">
                     <li>Testimonial</li>
                 </a>
-                <a href="#">
+                <a href="#seventhSection">
                     <li>Contact Us</li>
                 </a>
             </ol>
@@ -38,6 +38,20 @@
                 </form>
               
             </div>
+            <ol class="o-l second" >
+                <a href="#">
+                    <li class="firstLi">Home</li>
+                </a>
+                <a href="#myhead2nameContainer">
+                    <li>What we do?</li>
+                </a>
+                <a href="#myNextBigContainer">
+                    <li>Testimonial</li>
+                </a>
+                <a href="#seventhSection">
+                    <li>Contact Us</li>
+                </a>
+            </ol>
         </nav>
         <section class="headSection">
             <h1>Art is Eternal Happiness</h1>
@@ -86,7 +100,7 @@
         </section>
     </section>
 
-    <section class="myNextBigContainer">
+    <section class="myNextBigContainer"  id="myNextBigContainer">
         <section class="myhead2nameContainer">
             <section class="h2section mysecondh2section">
                 <h2>OUR LATEST WORK</h2>
@@ -171,7 +185,7 @@
             </section>
         </section>
         <div class="myCircleImgDiv">
-            <div class="parts first-part">
+            <div class="parts">
                 <section class="circleImg">
                     <div class="RoundImg">
                         <img src="img/man1.jpg" alt="team" />
@@ -209,7 +223,7 @@
                     </div>
                 </section>
             </div>
-            <div class=" parts second-part">
+            <div class=" parts">
                 <section class="circleImg">
                     <div class="RoundImg">
                         <img src="img/man4.jpg" alt="team" />
@@ -240,7 +254,7 @@
             <a href="#">WORK WITH US</a>
         </section>
     </section>
-    <footer class="seventhSection">
+    <footer class="seventhSection" id="seventhSection">
         <div class="seventhSectionDiv">
             <h4>ABOUT US</h4>
             <p style="margin-bottom:20px;"> This is Photoshop's version of Lorem Ipsum. Proin gravida nibh
